# nwn2dev-public

./: CMakeLists.txt
AuroraServerNWScript/: Hooks.cpp  Log.cpp  NWN2Def.h  NWNX4Plugin.h  NWScriptBridge.cpp  NWScriptBridge.h  NWScriptJITPolicy.h  NWScriptRuntime.cpp  NWScriptRuntime.h  Precomp.h  ServerNWScript.cpp  ServerNWScript.h
Gr2Conv/: Main.cpp
Granny2Lib/: Granny2Reader.cpp  Granny2Reader.h  GrannyNative.h  NWN2Format.h  Precomp.h
ListModuleAreas/: ListModuleAreas.cpp  Precomp.h
ListModuleModels/: ListModuleModels.cpp
ModelRenderer/: Camera.cpp  Camera.h  ModelRenderer.cpp  Precomp.h  WorldObject.cpp  WorldObject.h  WorldView.cpp  WorldView.h
NWN2DataLib/: 2DAFileReader.cpp  2DAFileReader.h  AreaHeightMap.h  AreaSurfaceMesh.cpp  AreaSurfaceMesh.h  AreaTerrainMesh.h  AreaWaterMesh.h  BifFileReader.cpp  BifFileReader.h  CMakeLists.txt  CollisionMesh.cpp  CollisionMesh.h  CollisionSphere.h  DdsImage.h  DirectoryFileReader.cpp  DirectoryFileReader.h  ErfFileReader.cpp  ErfFileReader.h  ErfFileWriter.cpp  ErfFileWriter.h  FileWrapper.h  GffFileReader.cpp  GffFileReader.h  GffFileWriter.cpp  GffFileWriter.h  Gr2FileReader.cpp  Gr2FileReader.h  HairPoint.h  HelmPoint.h  HookPoint.h  KeyFileReader.cpp  KeyFileReader.h  MDBFormat.h  MeshLinkage.cpp  MeshLinkage.h  MeshManager.cpp  MeshManager.h  ModelCollider.cpp  ModelCollider.h  ModelSkeleton.cpp  (+21 more)
NWN2DataLib/test/: CMakeLists.txt  read2da.cpp  readtlk.cpp
NWN2MathLib/: MathOps.cpp  MathOps.h
NWNBaseLib/: BaseConstants.h  BaseTypes.h  Compress.cpp  Compress.h  ModelSystem.h  NWNBaseLib.h
(+67 files in other folders)
